# hexproof

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
hexproof/: __init__.py
hexproof/_cli/: __init__.py  test_schema.py
hexproof/mtgjson/: __init__.py  enums.py  fetch.py
hexproof/mtgjson/schema/: booster.py  card.py  card_type.py  deck.py  deck_set.py  keywords.py  sealed_product.py  set.py  source_products.py  tcgplayer_skus.py  types.py
hexproof/mtgpics/: schemas.py
hexproof/schema/: __init__.py  meta.py  permissions.py  sets.py  symbols.py
hexproof/scryfall/: __init__.py  enums.py  fetch.py
hexproof/scryfall/schema/: __init__.py  card.py  cards.py  list_object.py  set.py
hexproof/types/scryfall/: cards.py
hexproof/vectors/: enums.py  fetch.py  schema.py
