[tool.poetry]
name = "hexproof"
version = "0.1.0"
description = "A comprehensive library of Magic the Gathering API utilities."
authors = ["Investigamer <freethoughtleft@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
pydantic = "^2.6.4"
PyYAML = "^6.0.1"
tomlkit = "^0.12.4"
tomli = "^2.0.1"
omnitils = {git = "https://github.com/Investigamer/omnitils.git"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
commitizen = "^3.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
